==> hxbao/ch573-bms/OnlyUpdateApp_Peripheral/APP/BMS/niuLogic.c <==
#include "includes.h"

static void Toggle_Led(void)
{
    GPIOA_InverseBits(TN_LED_PAPIN);
}

static uint8_t NiuLogic_CommTypeSel(void)
{

	if (GPIOB_ReadPortPin(TN_ACC_PBPIN))
		return 0;
	else
		if(niuCommdTable.commMode == 0)
		{
			return 1;
		}else
		{
			return 0;
		}
			
			

}

static void GpioInterruptConfig()
{
    GPIOB_ITModeCfg(TN_ACC_PBPIN, GPIO_ITMode_RiseEdge);
    GPIOB_ITModeCfg(TN_LOAD_DET_PBPIN, GPIO_ITMode_RiseEdge);
    GPIOB_ITModeCfg(TN_CHG_DET_PBPIN, GPIO_ITMode_RiseEdge);
    GPIOA_ITModeCfg(TN_SHINT_PAPIN, GPIO_ITMode_RiseEdge);

    PFIC_EnableIRQ(GPIO_A_IRQn);
    PFIC_DisableIRQ(GPIO_B_IRQn);

}

static void System_EnterLowPower(void)
{

	SWITCH_LED_OFF();
	//ADC_DeConfig();
#if (USE_485_IF == 1)
	SWITCH_485_POWER_OFF
#endif

	if (afeInfo.CellVmin < SHIP_MODE_CELLV_TH) //低电压保护后
	{
		//sh309 进入进入ship 模式
		//SH_ENABLE_SHIPMODE();
		AFE_EN_SHIPMODE();
		afeInfo.MosState_RT &= ~0x60;
		//关闭预放电MOS
		SWITCH_PRED_OFF();
		afeInfo.MosState_RT &= ~0x80;

		//禁止RTC 唤醒
		//PFIC_EnableIRQ(RTC_IRQn);

		//禁止TN_WAKE_UP，ACC，SH_INT,ALARM
//		NVIC_DisableIRQ(EXTI2_IRQn);   //ACC
		R16_PB_INT_EN &=~TN_ACC_PBPIN;
//		NVIC_DisableIRQ(EXTI15_10_IRQn); //通信中断
		R16_PA_INT_EN &=~TN_SHINT_PAPIN;

		//负载检测中断
		R16_PB_INT_EN &= ~TN_LOAD_DET_PBPIN;

		//充电检测
		R16_PB_INT_EN |= TN_CHG_DET_PBPIN;


#if (USE_485_IF == 1)
		//NVIC_DisableIRQ(); //485外部唤醒
#endif
		//只应许充电器接入唤醒
		flagIntEnterType = 0x02;
		//PRINT("Event->System goto ShipMode\n");
	}
	else
	{
		//前端芯片睡眠
		//Sh_SetRunMode(0x01);//ALARM 可以唤醒
		//AFE_SET_RUNMODE(0x01);

//		NVIC_EnableIRQ(RTC_IRQn);
//
//		//ACC，SH_INT,ALARM

	    //ACC
	    R16_PB_INT_EN |= TN_ACC_PBPIN;
	    //通信中断
	    R16_PA_INT_EN |=TN_SHINT_PAPIN;
	    //充电检测
	    R16_PB_INT_EN |= TN_CHG_DET_PBPIN;
	    //负载检测中断
	    R16_PB_INT_EN |= TN_LOAD_DET_PBPIN;


		flagIntEnterType = 0x01;
		PRINT("Event->System goto sleep\n");
	}

	//低功耗
	//CH57X_LowPower(5);

}

void NiuLogicRun(void)
{
	static uint8_t swCount = 0;
	uint8_t cmd[10] = {0x68,0x31,0xce,0x68,0x02,0x02,0x33,0xd3,0xd9,0x16};

	swCount++;
	if(swCount>10)
	{
	    swCount = 0;
	}

	if (bsp_CheckTimer(TMR_MAIN))
	{
		Toggle_Led();

		//判断蓝牙是否已经连接
		if(fBleConnedSta == 1)
		{
		    Niu_ModbusCfg(1,&app_uart_rx_fifo);
		    for(uint8_t i = 0;i <10;i++)
		    {
		    	NIU_ModbusRecvHandle(cmd[i]);
		    }
		}
	}

	switch(swCount)
	{
	  case 1:
	    AFE_Process();
	    break;
	  case 2:
	    AlgEngineProcess();
	    break;
	  case 3:
	    Niu_TableSyncHandle();
	    break;
	  case 4:
		//一线通逻辑切换
	      	if (NiuLogic_CommTypeSel())
	      	{
	      #if (USE_485_IF != 1)
	      		//Disable Uart 接收中断
	      		//DISABLE_UART_RXINT();
	      	      UART3_Reset();
	      //一线通发送数据
	      #if (ONEBUS_TYPE == 1) //小牛
	      		//Niu_OneBusProcess();
	      #elif (ONEBUS_TYPE == 2) //爱玛 天能
	      		TN_OneBusProcess();
	      #elif (ONEBUS_TYPE == 3) //雅迪一线通50字节
	      		Yd_OneBusProcess();
	      #elif (ONEBUS_TYPE == 4) //新日一线通12字节
	      		Xr_OneBusProcess();
	      #elif (ONEBUS_TYPE == 7) //钻豹一线通数据发送
	      		Zb_OneBusProcess();
	      #endif
	      		//Enable Uart 接收中断
	      		Uart3Init(NIU_ModbusRecvHandle);

	      #endif
	      	}
	      	else
	      	{

	      	}
	    break;

	  case 5:
	    NiuModbusPoll();
	    break;

	  case 6:
	    NiuLogic_MosHanle();
	    break;
	  default:
	    break;

	}
}
