==> hxbao/ch573-bms/bms/src/niuLogic.c <==
#include "includes.h"

static void Toggle_Led(void)
{
	static uint8_t s = 0;
	if (s)
	{
		s = 0;
		MCU_GPIO_ClrBit(TN_LED_PORT, TN_LED_PIN);
#if (PROJECT_ID == 2)
		MCU_GPIO_ClrBit(TN_LED2_PORT, TN_LED2_PIN);
#endif
	}
	else
	{
		s = 1;
		MCU_GPIO_SetBit(TN_LED_PORT, TN_LED_PIN);
#if (PROJECT_ID == 2)
		MCU_GPIO_SetBit(TN_LED2_PORT, TN_LED2_PIN);
#endif
	}
}

static uint8_t NiuLogic_CommTypeSel(void)
{
#if (ONEBUS_TYPE != 7)
	if (MCU_GPIO_GetBit(TN_ACC_PORT, TN_ACC_PIN))
		return 0;
	else
		if(niuCommdTable.commMode == 0)
		{
			return 1;
		}else
		{
			return 0;
		}
			
			
#else
	if (MCU_GPIO_GetBit(TN_ONE_RX_PORT, TN_ONE_RX_PIN))
		return 1;
	else
		return 0;
#endif
}

static void GpioInterruptConfig()
{
	EnableNvic(RTC_IRQn, IrqLevel3, TRUE);
	Gpio_EnableIrq(TN_SHINT_PORT, TN_SHINT_PIN, GpioIrqRising); //通信中断
	//Gpio_EnableIrq(TN_ALARM_PORT, TN_ALARM_PIN, GpioIrqFalling);	//sh309 中断
	Gpio_EnableIrq(TN_ACC_PORT, TN_ACC_PIN, GpioIrqFalling);		//ACC
	Gpio_EnableIrq(TN_CHG_DET_PORT, TN_CHG_DET_PIN, GpioIrqRising); //充电器接入
	bsp_StartTimer(TMR_COMM_INT_DELAY, 5000);
}

static void System_EnterLowPower(void)
{
	SWITCH_LED_OFF();
	//休眠ADC处理
	ADC_DeConfig();

#if (USE_485_IF == 1)
	SWITCH_485_POWER_OFF
#endif
	//----------------------------------------------------------------

	//if(1)//test
	if (afeInfo.CellVmin < SHIP_MODE_CELLV_TH) //低电压保护后
	{
		//sh309 进入进入ship 模式
		AFE_EN_SHIPMODE();
		afeInfo.MosState_RT &= ~0x60;
		//关闭预放电MOS
		SWITCH_PRED_OFF();
		afeInfo.MosState_RT &= ~0x80;

		//清iwdt
		EnableNvic(RTC_IRQn, IrqLevel3, TRUE);
		//EnableNvic(RTC_IRQn, IrqLevel3,FALSE);

		Gpio_DisableIrq(TN_ACC_PORT, TN_ACC_PIN, GpioIrqRising);	  //ACC
		Gpio_DisableIrq(TN_ALARM_PORT, TN_ALARM_PIN, GpioIrqFalling); //sh309 中断
		Gpio_DisableIrq(TN_SHINT_PORT, TN_SHINT_PIN, GpioIrqRising);  //通信中断
#if (USE_485_IF == 1)
		Gpio_DisableIrq(TN_485_INT_PORT, TN_485_INT_PIN, GpioIrqFalling); //485外部唤醒
#endif

		//只应许充电器接入唤醒
		Gpio_EnableIrq(TN_CHG_DET_PORT, TN_CHG_DET_PIN, GpioIrqRising); //充电器接入
		EnableNvic(PORTA_IRQn, IrqLevel2, TRUE);
		EnableNvic(PORTB_IRQn, IrqLevel3, FALSE);
		flagIntEnterType = 0x02;
		SEGGER_RTT_printf(0,"Event->System goto ShipMode\n");
	}
	else
	{
		//前端芯片睡眠
		AFE_SET_RUNMODE(0x01);

		EnableNvic(RTC_IRQn, IrqLevel3, TRUE);
		Gpio_EnableIrq(TN_SHINT_PORT, TN_SHINT_PIN, GpioIrqRising); //通信中断
#if (AFE_CHIP_SELECT != 3)
		Gpio_EnableIrq(TN_ALARM_PORT, TN_ALARM_PIN, GpioIrqFalling);	//sh309 中断
#else
		Gpio_DisableIrq(TN_ALARM_PORT, TN_ALARM_PIN, GpioIrqFalling);	//sh309 中断
#endif
		Gpio_EnableIrq(TN_ACC_PORT, TN_ACC_PIN, GpioIrqFalling);		//ACC
		Gpio_EnableIrq(TN_CHG_DET_PORT, TN_CHG_DET_PIN, GpioIrqRising); //充电器接入
#if (PROJECT_ID != 2)
		Gpio_EnableIrq(TN_LOAD_DET_PORT, TN_LOAD_DET_PIN, GpioIrqFalling);//Load 接入
#endif

#if (USE_485_IF == 1)
		Gpio_EnableIrq(TN_485_INT_PORT, TN_485_INT_PIN, GpioIrqFalling); //485外部唤醒
#endif

		EnableNvic(PORTB_IRQn, IrqLevel3, TRUE);
		EnableNvic(PORTA_IRQn, IrqLevel2, TRUE);
		flagIntEnterType = 0x01;
		SEGGER_RTT_printf(0,"Event->System goto sleep\n");
	}
	Lpm_GotoDeepSleep(TRUE);
}

static void GpioInterruptConfig()
{
	GPIO_InitType GPIO_InitStructure;
	EXTI_InitType EXTI_InitStructure;
	NVIC_InitType NVIC_InitStructure;

	//TN_WAKE_UP - PA01，TN_ACC-PA02，TN_CHG_DET-PA0，TN_SHINT-PB06

	RCC_EnableAPB2PeriphClk(RCC_APB2_PERIPH_GPIOA | RCC_APB2_PERIPH_GPIOB | RCC_APB2_PERIPH_AFIO, ENABLE);

	//初始化管脚为浮动输入模式
	GPIO_InitStruct(&GPIO_InitStructure);
	GPIO_InitStructure.Pin = TN_WAKE_UP_PIN | TN_ACC_PIN |TN_LOAD_DET_PIN|TN_SHINT_PIN|TN_CHG_DET_PIN;
	GPIO_InitStructure.GPIO_Pull = GPIO_No_Pull;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Input; //
	GPIO_InitPeripheral(GPIOA, &GPIO_InitStructure);

	GPIO_InitStructure.Pin = TN_ALARM_PIN;
	GPIO_InitPeripheral(GPIOB, &GPIO_InitStructure);

	// GPIO_InitStructure.GPIO_Pull = GPIO_No_Pull;
	// GPIO_InitStructure.Pin = TN_SHINT_PIN|TN_CHG_DET_PIN;
	// GPIO_InitPeripheral(GPIOA, &GPIO_InitStructure);

	//配置中断线
	GPIO_ConfigEXTILine(GPIOA_PORT_SOURCE, GPIO_PIN_SOURCE0);  //chg-det
	GPIO_ConfigEXTILine(GPIOA_PORT_SOURCE, GPIO_PIN_SOURCE1);  //TN_WAKE_UP
	GPIO_ConfigEXTILine(GPIOA_PORT_SOURCE, GPIO_PIN_SOURCE2);  //PA02，TN_ACC
	GPIO_ConfigEXTILine(GPIOA_PORT_SOURCE, GPIO_PIN_SOURCE10);  //PB06 SHINT
	//GPIO_ConfigEXTILine(GPIOB_PORT_SOURCE, GPIO_PIN_SOURCE12); //PB12 ALARM
	GPIO_ConfigEXTILine(GPIOA_PORT_SOURCE, GPIO_PIN_SOURCE11); //PA11 LOAD DET
	
	EXTI_InitStructure.EXTI_Line = EXTI_LINE0; //chg-det
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising; // EXTI_Trigger_Rising;
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_InitPeripheral(&EXTI_InitStructure);

	EXTI_InitStructure.EXTI_Line = EXTI_LINE1; //TN_WAKE_UP
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling; // EXTI_Trigger_Rising;
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_InitPeripheral(&EXTI_InitStructure);

	EXTI_InitStructure.EXTI_Line = EXTI_LINE2; //TN_ACC
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling; // EXTI_Trigger_Rising;
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_InitPeripheral(&EXTI_InitStructure);

	EXTI_InitStructure.EXTI_Line = EXTI_LINE10; //SHINT
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Rising; // EXTI_Trigger_Rising;
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_InitPeripheral(&EXTI_InitStructure);

	// EXTI_InitStructure.EXTI_Line = EXTI_LINE12; //ALARM
	// EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	// EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling; // EXTI_Trigger_Rising;
	// EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	// EXTI_InitPeripheral(&EXTI_InitStructure);

	EXTI_InitStructure.EXTI_Line = EXTI_LINE11; //LOAD DET
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling; // EXTI_Trigger_Rising;
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_InitPeripheral(&EXTI_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = EXTI0_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = EXTI1_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = EXTI2_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = EXTI15_10_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x05;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);
	
}

static void System_EnterLowPower(void)
{

	SWITCH_LED_OFF();
	ADC_DeConfig();
#if (USE_485_IF == 1)
	SWITCH_485_POWER_OFF
#endif

	if (afeInfo.CellVmin < SHIP_MODE_CELLV_TH) //低电压保护后
	{
		//sh309 进入进入ship 模式
		//SH_ENABLE_SHIPMODE();
		AFE_EN_SHIPMODE();
		afeInfo.MosState_RT &= ~0x60;
		//关闭预放电MOS
		SWITCH_PRED_OFF();
		afeInfo.MosState_RT &= ~0x80;

		//禁止RTC 唤醒
		NVIC_EnableIRQ(RTC_IRQn);

		//禁止TN_WAKE_UP，ACC，SH_INT,ALARM
		NVIC_DisableIRQ(EXTI1_IRQn);   //禁止TN_WAKE_UP
		NVIC_DisableIRQ(EXTI2_IRQn);   //ACC
		NVIC_DisableIRQ(EXTI15_10_IRQn); //通信中断
#if (USE_485_IF == 1)
		//NVIC_DisableIRQ(); //485外部唤醒
#endif
		//只应许充电器接入唤醒
		NVIC_EnableIRQ(EXTI0_IRQn);
		flagIntEnterType = 0x02;
		SEGGER_RTT_printf(0,"Event->System goto ShipMode\n");
	}
	else
	{
		//前端芯片睡眠
		//Sh_SetRunMode(0x01);//ALARM 可以唤醒
		//AFE_SET_RUNMODE(0x01);

		NVIC_EnableIRQ(RTC_IRQn);

		//禁止TN_WAKE_UP，ACC，SH_INT,ALARM
		NVIC_EnableIRQ(EXTI1_IRQn);		//TN_WAKE_UP
		NVIC_EnableIRQ(EXTI2_IRQn);		//ACC
		//NVIC_EnableIRQ(EXTI9_5_IRQn);	//通信中断
#if (AFE_CHIP_SELECT != 3)		
		NVIC_EnableIRQ(EXTI15_10_IRQn); //ALARM 中断
#else
		NVIC_DisableIRQ(EXTI15_10_IRQn);
#endif
		//只应许充电器接入唤醒
		NVIC_EnableIRQ(EXTI0_IRQn);
		flagIntEnterType = 0x01;
		SEGGER_RTT_printf(0,"Event->System goto sleep\n");
	}
	//禁止systick中断
	SysTick->CTRL  &= ~SysTick_CTRL_TICKINT_Msk ; 
	//MCU ,进入Stop2 模式
	RCC_EnableAPB1PeriphClk(RCC_APB1_PERIPH_PWR, ENABLE);

	PWR_EnterSTOP2Mode(PWR_STOPENTRY_WFI, PWR_CTRL3_RAM1RET);
}

void NiuLogicRun(void)
{
	if (bsp_CheckTimer(TMR_MAIN))
	{
		Toggle_Led();
	}
	//前端信息采集和mcu采集数据
	AFE_Process();
	//soc，soh等算法实现
	AlgEngineProcess();
	//同步数据
	Niu_TableSyncHandle();
#if(PROJECT_ID == 2)	
	Ty_TableUpdate();
#endif
	//一线通逻辑切换
	if (NiuLogic_CommTypeSel())
	{
#if (USE_485_IF != 1)
		//Disable Uart 接收中断
		DISABLE_UART_RXINT();
//一线通发送数据
#if (ONEBUS_TYPE == 1) //小牛
		Niu_OneBusProcess();
#elif (ONEBUS_TYPE == 2) //爱玛 天能
		TN_OneBusProcess();
#elif (ONEBUS_TYPE == 3) //雅迪一线通50字节
		Yd_OneBusProcess();
#elif (ONEBUS_TYPE == 4) //新日一线通12字节
		Xr_OneBusProcess();
#elif (ONEBUS_TYPE == 7) //钻豹一线通数据发送
		Zb_OneBusProcess();
#endif
		//Enable Uart 接收中断
		ENABLE_UART_RXINT();
#endif
	}
	else
	{
		NiuModbusPoll();
	}
	//均衡控制处理
	NiuLogic_BalanceHanle();
	//MOS失效之后，三端保险紧急保护措施
	NiuLogic_ThreeFulseProtect();

	//软件保护控制
	NiuLogic_Protect();
	//充放电MOS、和预放电MOS 和休眠进入逻辑处理
	NiuLogic_MosHanle();
}
